  - USA should be more apt to declare operation enduring freedom if there is less than 25% threat or if they have not done so before Jan 2005

 Balance:
  - Reduced the passive counter intelligence gain from the "Counter-Intelligence" agency upgrade
  - Increased the gained acreage for Brazil for the Amazon Rainforest system

 Bugfix:
  - Fixed the Internal Faction event "Communist Cadres & The Military Fight Over Ideology" having incorrect options and opinion boosts
  - Fixed the "X Proposes Pre-emptive strike against Iran" event triggering twice for someone
  - Fixed Ukraine being 20 years ahead in Anti Air weaponry for No Step Back users
  - Fixed the Space Programs not showing up properly due to bad DLC checks
  - Fixed the Productivity & Unemployment Dynamic Modifier having the wrong modifier
  - Fixed the Chinese focus "String of Pearls"
  - Fixed the starting crash for Linux users due to bad unicode characters in the new terrain pictures
  - Fixed the Agricultural District Construction speed spazzing out at low and high productivity

 Database:
  - Changed Eurofighter, Gripen, Viggen, J-10, Rafale to use the Delta Wing Canard wingform

 Graphics:
  - Updated the Graphic library again to properly include the soviet aircraft carriers
  - Adjusted some misplaced icons for decisions in the Amazon Rainforest decisions
  - Fixed some graphical elements for Gronland, Reykjavik
  - Fixed broken achievement icons for Brazil MD Achievements
  - Fixed missing model for the Arleigh Burke class destroyer
  - Fixed some ASCII characters breaking terrain pictures

 Localization:
  - Fixed a reference in the African Union decision category referencing billion instead of thousands
  - Updated the loading tip for Bolivia to accurately represent it's current number of coups
  - Flipped the colors of the "Internal Investments" Political Power and Monetary Cost Modifiers

v1.11.1

 Achievements: