@@ -20,8 +20,10 @@ BRA_amazon_conservation_system_decision_category = {
 
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_plant_additional_trees"
-			set_temp_variable = { temp_change = 45 }
+			set_temp_variable = { temp_change = 40 }
 			BRA_conserv_acreage_effect = yes
+			set_temp_variable = { temp_change = 10 }
+			BRA_wild_acreage_effect = yes
 		}
 
 		ai_will_do = {
@@ -39,6 +41,8 @@ BRA_amazon_conservation_system_decision_category = {
 
 		available = {
 			NOT = { has_active_mission = bankruptcy_incoming_collapse }
+			set_temp_variable = { needed_acreage = 15 }
+			BRA_has_wild_acreage_x = yes
 		}
 
 		complete_effect = {
@@ -84,7 +88,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_establish_amazonian_national_park_service"
 			set_temp_variable = { temp_change = 25 }
-			BRA_acres_conserved_change_effect = yes
+			BRA_conserv_acreage_effect = yes
 			set_country_flag = BRA_established_amazon_park_service
 		}
 
@@ -167,6 +171,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 892
 			has_full_control_of_state = 891
+			set_temp_variable = { needed_acreage = 10 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -227,6 +233,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 892
 			has_full_control_of_state = 891
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -245,7 +253,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_expand_the_gold_mining_initiatives"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			892 = {
 				add_resource = {
 					type = chromium
@@ -287,6 +295,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 1024
 			has_full_control_of_state = 892
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -305,7 +315,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_expand_rubber_production_on_the_coast"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			891 = {
 				add_resource = {
 					type = rubber
@@ -480,6 +490,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 892
 			has_decision = BRA_decision_initial_investment
+			set_temp_variable = { needed_acreage = 4 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -492,8 +504,8 @@ BRA_amazon_conservation_system_decision_category = {
 			log = "[GetDateText]: [Root.GetName]: Decision BRA_decision_the_road_to_el_dorado"
 			set_temp_variable = { treasury_change = -3.5 }
 			modify_treasury_effect = yes
-			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			set_temp_variable = { temp_change = -4 }
+			BRA_conserv_acreage_effect = yes
 
 			set_country_flag = BRA_the_road_to_el_dorado
 		}
@@ -551,6 +563,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 892
 			has_decision = BRA_decision_initial_investment
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		complete_effect = {
@@ -564,7 +578,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_expand_the_mining_industry"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			add_resource = {
 				type = aluminium
 				amount = 10
@@ -608,6 +622,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 891
 			has_decision = BRA_decision_initial_investment
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -627,7 +643,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_increase_the_oil_production"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			add_resource = {
 				type = oil
 				amount = 12
@@ -678,6 +694,8 @@ BRA_amazon_conservation_system_decision_category = {
 		available = {
 			has_full_control_of_state = 892
 			has_decision = BRA_decision_initial_investment
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		highlight_states = {
@@ -698,7 +716,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_increase_military_production"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			892 = {
 				add_extra_state_shared_building_slots = 1
 				add_building_construction = {
@@ -768,7 +786,7 @@ BRA_amazon_conservation_system_decision_category = {
 		remove_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision remove BRA_decision_tech_metal_industry_in_the_amazon"
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 			add_resource = {
 				type = tungsten
 				amount = 8
@@ -1158,6 +1176,8 @@ BRA_major_development_projects_decision_category = {
 		}
 		available = {
 			has_full_control_of_state = 892
+			set_temp_variable = { needed_acreage = 8 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		complete_effect = {
@@ -1167,7 +1187,7 @@ BRA_major_development_projects_decision_category = {
 			set_temp_variable = { treasury_change = -10 }
 			modify_treasury_effect = yes
 			set_temp_variable = { temp_change = -8 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 		}
 
 		remove_effect = {
