@@ -1885,9 +1885,22 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [THIS.GetName]: Focus BRA_pay_back_the_imf"
-			remove_ideas = BRA_idea_crippled_currency_two
-			remove_ideas = BRA_idea_imf_debts
-			remove_ideas = BRA_idea_foreign_debt_assistance
+			if = {
+				limit = { has_idea = BRA_idea_crippled_currency_two }
+				remove_ideas = BRA_idea_crippled_currency_two
+			}
+			if = {
+				limit = { has_idea = BRA_idea_crippled_currency_one }
+				remove_ideas = BRA_idea_crippled_currency_one
+			}
+			if = {
+				limit = { has_idea = BRA_idea_imf_debts }
+				remove_ideas = BRA_idea_imf_debts
+			}
+			if = {
+				limit = { has_idea = BRA_idea_foreign_debt_assistance }
+				remove_ideas = BRA_idea_foreign_debt_assistance
+			}
 			set_temp_variable = { debt_change = debt }
 			multiply_temp_variable = { debt_change = -0.15 }
 			clamp_temp_variable = { var = debt_change max = 0 min = -300 }
@@ -4607,6 +4620,8 @@ focus_tree = {
 
 		available = {
 			has_full_control_of_state = 892
+			set_temp_variable = { needed_acreage = 15 }
+			BRA_has_conserved_acreage_x = yes
 		}
 
 		completion_reward = {
@@ -4623,7 +4638,7 @@ focus_tree = {
 			modify_treasury_effect_corruption = yes
 			custom_effect_tooltip = BRA_economic_focuses_advice_tt
 			set_temp_variable = { temp_change = -15 }
-			BRA_wild_acreage_effect = yes
+			BRA_conserv_acreage_effect = yes
 		}
 
 		ai_will_do = {
@@ -9057,6 +9072,11 @@ focus_tree = {
 		prerequisite = { focus = BRA_pro_workers }
 		search_filters = { FOCUS_FILTER_ECONOMY FOCUS_FILTER_AMAZON_CONSERVATION }
 
+		available = {
+			set_temp_variable = { needed_acreage = 12 }
+			BRA_has_conserved_acreage_x = yes
+		}
+
 		completion_reward = {
 			log = "[GetDateText]: [THIS.GetName]: Focus BRA_industrialization_help_from_china"
 			CHI = {
@@ -9083,8 +9103,8 @@ focus_tree = {
 					instant_build = yes
 				}
 			}
-			set_temp_variable = { temp_change = -10 }
-			BRA_wild_acreage_effect = yes
+			set_temp_variable = { temp_change = -12 }
+			BRA_acres_conserved_change_effect = yes
 			increase_economic_growth = yes
 		}
 
@@ -12051,6 +12071,11 @@ focus_tree = {
 		prerequisite = { focus = BRA_privatize_petrobras }
 		search_filters = { FOCUS_FILTER_RESOURCE FOCUS_FILTER_AMAZON_CONSERVATION }
 
+		available = {
+			set_temp_variable = { needed_acreage = 35 }
+			BRA_has_conserved_acreage_x = yes
+		}
+
 		completion_reward = {
 			log = "[GetDateText]: [THIS.GetName]: Focus BRA_mining_amazon"
 			set_temp_variable = { treasury_change = -70 }
@@ -12091,8 +12116,8 @@ focus_tree = {
 					amount = 5
 				}
 			}
-			set_temp_variable = { temp_change = -50 }
-			BRA_wild_acreage_effect = yes
+			set_temp_variable = { temp_change = -35 }
+			BRA_acres_conserved_change_effect = yes
 		}
 
 		ai_will_do = {
