@@ -49,7 +49,7 @@ on_actions = {
 
 	on_monthly_BRA = {
 		random_events = {
-			1500 = 0
+			1800 = 0
 
 			# Custom Events for the Amazon
 			# Disaster Random Events
