@@ -1,0 +1,13 @@
+BRA_has_conserved_acreage_x = {
+	custom_trigger_tooltip = {
+		check_variable = { BRA_acres_conserved > needed_acreage }
+		tooltip = BRA_has_conserved_acreage_x_tt
+	}
+}
+
+BRA_has_wild_acreage_x = {
+	custom_trigger_tooltip = {
+		check_variable = { BRA_acres_wild > needed_acreage }
+		tooltip = BRA_has_wild_acreage_x_tt
+	}
+}
