@@ -117,6 +117,7 @@ country_event = {
 
 		set_temp_variable = { temp_change = -50 }
 		BRA_wild_acreage_effect = yes
+		BRA_acres_conserved_change_effect = yes
 
 		ai_chance = {
 			base = 0
@@ -2887,7 +2888,7 @@ country_event = {
 			}
 		}
 
-		set_temp_variable = { temp_change = -30 }
+		set_temp_variable = { temp_change = -20 }
 		BRA_conserv_acreage_effect = yes
 
 		ai_chance = {
@@ -2916,7 +2917,7 @@ country_event = {
 		name = brazil_amazon.8.a
 		log = "[GetDateText]: [This.GetName]: brazil_amazon.8.a executed"
 
-		set_temp_variable = { temp_change = -25 }
+		set_temp_variable = { temp_change = -20 }
 		BRA_wild_acreage_effect = yes
 	}
 
