@@ -17814,13 +17814,11 @@ news_event = {
 
 	option = {
 		name = usa_news.18.o1
-		log = "[GetDateText]: [This.GetName]: usa_news.18.o1 executed"
 		trigger = { original_tag = USA }
 	}
 
 	option = {
 		name = usa_news.18.o2
-		log = "[GetDateText]: [This.GetName]: usa_news.18.o2 executed"
 		trigger = {
 			NOT = { original_tag = USA }
 			NOT = { original_tag = NKO }
@@ -17831,7 +17829,6 @@ news_event = {
 
 	option = {
 		name = usa_news.18.o3
-		log = "[GetDateText]: [This.GetName]: usa_news.18.o3 executed"
 		trigger = {
 			OR = {
 				original_tag = NKO
@@ -17842,7 +17839,6 @@ news_event = {
 
 	option = {
 		name = usa_news.18.o4
-		log = "[GetDateText]: [This.GetName]: usa_news.18.o4 executed"
 		trigger = {
 			original_tag = SUD
 		}
