@@ -1173,7 +1173,8 @@
  BRA_acres_conserved_change_effect_tt: "Changes §YConserved Rainforest Acreage Conversion Rate§! by [?temp_change|+] (Current Conserved Rainforest Acreage Conversion Rate: [?BRA_acres_conserved_change|Y])"
  BRA_amazonian_high_command_tt: "Establishes the §YAmazonian High Command§! allowing you to utilize the military in events related to the §YAmazon Rainforest§!\n"
  BRA_worker_party_alignment_effect_tt: "Change §YWorkers' Party Alignment§! by [?temp_change|+] (Current Worker's Party Alignment: [?BRA_brazilian_party_alignment|Y0])"
-
+ BRA_has_conserved_acreage_x_tt: "Has §YTotal Conserved Rainforest Acreage§! of [?needed_acreage|0Y] or higher (Current Conserved Rainforest Acreage: [?BRA_acres_conserved|Y])"
+ BRA_has_wild_acreage_x_tt: "Has §YTotal Wild Rainforest Acreage§! of [?needed_acreage|0Y] or higher (Current Wild Rainforest Acreage: [?BRA_acres_wild|Y])"
  # Custom Diplomatic Relations
  nestor_forster_embassador: "Nestor Forster as Ambassador"
  eduardo_bolsonaro_embassador: "Eduardo Bolsonaro as Ambassador"
@@ -1215,7 +1216,8 @@
 
  # Amazon System
  BRA_amazon_conservation_system_decision_category: "Amazon Rainforest Conservation"
- BRA_amazon_conservation_system_decision_category_desc: "\n£BRA_desctext_amazon\n\n\n\nThe Amazon Rainforest is truly one of the world's greatest wonders and we are one of the lucky nations to house its beauty within our borders. The resoucres the rainforest boasts also makes it an attractive subject for our politics about using it for economic development.\n\n\nThe Amazon Rainforest mechanic requires you to keep your §YTotal Amazon Acreage§! close to its target or exceeding the §YTotal Targeted Acreage§!. If we do not maintain this balance we will start to suffer penalties in our Amazonian states and we will start to see progressively worse events fire depending on how much of the rainforest has been destroyed. The §YTotal Amazon Acreage§! is comrpised of §YWild Amazon Acreage§! and §YConserved Amazon Acreage§!. We gain or lose additional §YWild Acreage§! every month based on decisions we make on economic policy regarding the §YAmazonian States§!.\n\nMaintaining a high ratio of §YTotal Conserved Amazon Acreage§! will bring higher benefits long-term, but slashing and burning will also allow us to exploit things like mineral wealth, §YBuildings§!, and §YBuilding Slots§!.\n\nTotal Targeted Rainforest Acreage: [?BRA_acres_target]\nTotal Rainforest Acreage: [?BRA_acres_current]\n\nTotal Wild Rainforest Acreage: [?BRA_acres_wild]\nTotal Conserved Wild Amazon Acreage: [?BRA_acres_conserved]\n\nConserved Rainforest Acreage Conversion Rate: [?BRA_acres_conserved_change|+]\nWild Rainforest Acreage Monthly Gain: [?BRA_acre_rate_gain|+]\nWild Rainforest Acreage Year Monthly Loss: [?BRA_acre_rate_loss|-]\nNet Monthly Amazon Acreage: [?BRA_net_acreage|+] Acres a Month"
+ # \n£BRA_desctext_amazon\n\n\n\n # TODO: readd this back once we have actual graphics for its
+ BRA_amazon_conservation_system_decision_category_desc: "The Amazon Rainforest is truly one of the world's greatest wonders and we are one of the lucky nations to house its beauty within our borders. The resoucres the rainforest boasts also makes it an attractive subject for our politics about using it for economic development.\n\n\nThe Amazon Rainforest mechanic requires you to keep your §YTotal Amazon Acreage§! close to its target or exceeding the §YTotal Targeted Acreage§!. If we do not maintain this balance we will start to suffer penalties in our Amazonian states and we will start to see progressively worse events fire depending on how much of the rainforest has been destroyed. The §YTotal Amazon Acreage§! is comrpised of §YWild Amazon Acreage§! and §YConserved Amazon Acreage§!. We gain or lose additional §YWild Acreage§! every month based on decisions we make on economic policy regarding the §YAmazonian States§!.\n\nMaintaining a high ratio of §YTotal Conserved Amazon Acreage§! will bring higher benefits long-term, but slashing and burning will also allow us to exploit things like mineral wealth, §YBuildings§!, and §YBuilding Slots§!.\n\nTotal Targeted Rainforest Acreage: [?BRA_acres_target]\nTotal Rainforest Acreage: [?BRA_acres_current]\n\nTotal Wild Rainforest Acreage: [?BRA_acres_wild]\nTotal Conserved Wild Amazon Acreage: [?BRA_acres_conserved]\n\nConserved Rainforest Acreage Conversion Rate: [?BRA_acres_conserved_change|+]\nWild Rainforest Acreage Monthly Gain: [?BRA_acre_rate_gain|+]\nWild Rainforest Acreage Year Monthly Loss: [?BRA_acre_rate_loss|-]\nNet Monthly Amazon Acreage: [?BRA_net_acreage|+] Acres a Month"
  BRA_decision_plant_additional_trees: "Plant Additional Trees"
  BRA_decision_plant_additional_trees_desc: "We can replant portions of the Amazon rainforest in our conservation zones to help push us towards the targeted acreage of the rainforest."
  BRA_decision_declare_new_conservation_lands: "Declare New Conservation Lands"
