@@ -7,6 +7,7 @@ v1.11.1b
  Balance:
   - Reduced the passive counter intelligence gain from the "Counter-Intelligence" agency upgrade
   - Increased the gained acreage for Brazil for the Amazon Rainforest system
+  - Added some triggers to the Brazilian content that you can't take decisions if you do not have the acreage to do it.
 
  Bugfix:
   - Fixed the Internal Faction event "Communist Cadres & The Military Fight Over Ideology" having incorrect options and opinion boosts
